--- a/0-the-triple-threat-of-frontend/index.html
+++ b/0-the-triple-threat-of-frontend/index.html
@@ -9,13 +9,10 @@
     <script type="text/javascript" src="./index.js"></script>
   </head>
   <body>
-      <h1 class="title">Cats are our masters!</h1>
-      <h1 class="subtitle">Dogs are our enemies!</h1>
+    <h1 class="title">Cats are our masters!</h1>
+    <h1 class="subtitle">Dogs are our enemies!</h1>
     <div>
-      <img
-        id="cat-img"
-        src="./photos/cats/cat0.webp"
-      />
+      <img id="cat-img" src="./photos/cats/cat0.webp" />
     </div>
     <div>
       <button class="primary-btn" id="cat-btn">Show me a different cat!</button>
